<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_field_email"
        style="@style/AppTextField"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_field_password"
        style="@style/AppTextField"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        style="@style/AppButton"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="@style/AppButton.Borderless"
        android:text="@string/go_to_registration" />

</LinearLayout>