<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".ui.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_choose_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:foreground="?selectableItemBackgroundBorderless"
            app:cardBackgroundColor="@color/button"
            app:cardCornerRadius="75dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chosen_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/choose_photo"
                android:textColor="@color/on_button"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/text_field_username"
            style="@style/AppTextField"
            android:layout_marginTop="50dp"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/text_field_email"
            style="@style/AppTextField"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/text_field_password"
            style="@style/AppTextField"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            style="@style/AppButton"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            style="@style/AppButton.Borderless"
            android:text="@string/already_have_account" />

    </LinearLayout>

</ScrollView>